# simple-console-snake-cpp

./: CMakeLists.txt
Framework/Source/Inc/: ErrorUtils.h  GenericAssert.h  IActor.h  IApp.h  IGame.h  WindowsAssert.h
Framework/Source/Src/: ActorManager.cpp  AppHost.cpp  ConsoleManager.cpp  ErrorUtils.cpp  GameTimer.cpp  IApp.cpp  InputManager.cpp
Game/Source/Inc/: Food.h  Game.h  GameApp.h  GameContext.h  GameController.h  GameOverView.h  GameRenderer.h  LevelInfo.h  LevelView.h  PauseOrQuitActor.h  ReadyView.h  Snake.h
Game/Source/Src/: ContextView.cpp  Food.cpp  FoodView.cpp  Game.cpp  GameApp.cpp  GameContext.cpp  GameController.cpp  GameOverView.cpp  GameRenderer.cpp  GameStateView.cpp  LevelInfo.cpp  LevelView.cpp  PauseOrQuitActor.cpp  ReadyView.cpp  Snake.cpp
Source/Inc/: ConsoleManager.h  ContextView.h  ErrorUtils.h  Food.h  GameApp.h  GameAssert.h  GameContext.h  GameTimer.h  IManager.h  IManager.inl  InputManager.h  Macro.h  MathUtils.h  RenderManager.h  Snake.h  StringUtils.h
Source/Src/: ConsoleManager.cpp  ContextView.cpp  ErrorUtils.cpp  Food.cpp  GameApp.cpp  GameContext.cpp  GameTimer.cpp  InputManager.cpp  Main.cpp  MathUtils.cpp  RenderManager.cpp  Snake.cpp  StringUtils.cpp
Tool/Batch/: Package.bat
Tool/Script/: cli.py  cmake_helper.py  config.py
