cmake_minimum_required(VERSION 3.27)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

set(PROJECT_NAME "Snake")
project(${PROJECT_NAME} LANGUAGES CXX)

set(PROJECT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(PROJECT_SOURCE_PATH "${PROJECT_PATH}/Source")
set(PROJECT_SOURCE_INC_PATH "${PROJECT_SOURCE_PATH}/Inc")
set(PROJECT_SOURCE_SRC_PATH "${PROJECT_SOURCE_PATH}/Src")

file(GLOB_RECURSE PROJECT_SOURCE_FILE "${PROJECT_SOURCE_PATH}/**")
file(GLOB_RECURSE PROJECT_SOURCE_INC_FILE "${PROJECT_SOURCE_INC_PATH}/**")
file(GLOB_RECURSE PROJECT_SOURCE_SRC_FILE "${PROJECT_SOURCE_SRC_PATH}/**")

add_executable(${PROJECT_NAME} ${PROJECT_SOURCE_FILE} ${PROJECT_SOURCE_INC_FILE} ${PROJECT_SOURCE_SRC_FILE})
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_INC_PATH} ${PROJECT_SOURCE_SRC_PATH})

target_compile_definitions(
    ${PROJECT_NAME}
    PUBLIC
    $<$<CONFIG:Debug>:DEBUG_MODE>
    $<$<CONFIG:Release>:RELEASE_MODE>
    $<$<CONFIG:RelWithDebInfo>:REL_WITH_DEB_INFO_MODE>
    $<$<CONFIG:MinSizeRel>:MINSIZE_REL_MODE>
)

set_property(TARGET ${PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
set_property(TARGET ${PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")

source_group(TREE "${PROJECT_SOURCE_PATH}" PREFIX "Source" FILES ${PROJECT_SOURCE_FILE})
source_group(TREE "${PROJECT_SOURCE_INC_PATH}" PREFIX "Source/Inc" FILES ${PROJECT_SOURCE_INC_FILE})
source_group(TREE "${PROJECT_SOURCE_SRC_PATH}" PREFIX "Source/Src" FILES ${PROJECT_SOURCE_SRC_FILE})

set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})